# os-helper

./: .gitignore  CHANGELOG.md  CODING.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  GUI.md  LANDSCAPE.md  LICENSE  LISEZMOI.md  PAYSAGE.md  README.md  __init__.py  environment.yml  main.py  manual_poetry.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_os_helpers.py
.github/workflows/: ci.yml
assets/: landscape.csv  paysage.csv
docs/: api_reference.rst  conf.py  index.rst
docs/source/: modules.rst  os_helper.rst
os_helper/: __init__.py  cli_argparse.py  cli_click.py  config_utils.py  gui.py  hash_utils.py  logging_utils.py  main.py  misc_utils.py  path_utils.py  profile_utils.py  progress_bar.py  string_utils.py  system_utils.py  temp_utils.py
tests/: main.py  test_cli.py  test_gui.py  test_os_helpers.py
